feat: connect to API

--- a/front-end/main.html
+++ b/front-end/main.html
@@ -39,7 +39,7 @@
 
         <section class="cols-1">
             <figure>
-                <h2>Construcciones por año</h2>
+                <h2>Average scored points per week</h2>
                 <canvas id="yearsChart" height="300px"></canvas>
             </figure>
         </section>
