--- a/front-end/main.html
+++ b/front-end/main.html
@@ -27,9 +27,40 @@
             <figure>
                 <h2>Comparativa de características:
                     <select id="featuresOptions">
-                        <option value="height">Altura (m)</option>
-                        <option value="length">Longitud (m)</option>
-                        <option value="speed">Velocidad (km/h)</option>
+                        <option value="global">Global</option>
+                        <option value="LA">Los Angeles Rams</option>
+                        <option value="ATL">Atlanta</option>
+                        <option value="CAR">Carolina</option>
+                        <option value="CHI">Chicago</option>
+                        <option value="CIN">Cincinnati</option>
+                        <option value="DET">Detroit</option>
+                        <option value="HOU">Houston</option>
+                        <option value="MIA">Miami</option>
+                        <option value="NYJ">New York Jets</option>
+                        <option value="TEN">Tennessi</option>
+                        <option value="WAS">Washintong</option>
+                        <option value="ARI">Arizona</option>
+                        <option value="LAC">Los Angeles Chargers</option>
+                        <option value="MIN">Minnesota</option>
+                        <option value="DAL">Dallas</option>
+                        <option value="SEA">Seattle</option>
+                        <option value="KC">Kansas City</option>
+                        <option value="BAL">Baltimore</option>
+                        <option value="CLE">Cleveland</option>
+                        <option value="JAX">Jacksonville</option>
+                        <option value="NO">New Orleans</option>
+                        <option value="NYG">New Jork Giants</option>
+                        <option value="PIT">Pittsburgh</option>
+                        <option value="SF">San Francisco</option>
+                        <option value="DEN">Denver</option>
+                        <option value="LV">Las Vegas</option>
+                        <option value="GB">Green Bay</option>
+                        <option value="BUF">Buffalo</option>
+                        <option value="PHI">Philadelphia</option>
+                        <option value="IND">Indianapolis</option>
+                        <option value="NE">New England</option>
+                        <option value="TB">Tampa Bay</option>
+                        
                     </select>
                 </h2>
                 <canvas id="featuresChart"></canvas>
