--- a/front-end/main.html
+++ b/front-end/main.html
@@ -12,15 +12,15 @@
 <body>
     <main>
 
-        <h1>Montañas rusas dataviz</h1>
-        <p>Visualización de estadísticas globales</p>
+        <h1>NFL seasson 2022</h1>
+        <p>Visualización de estadísticas globales y por equipo</p>
 
         <hr>
 
         <section class="cols-2">
 
             <figure>
-                <h2>Comparativa de modelos</h2>
+                <h2>Frecuencia de formaciones ofensivas</h2>
                 <canvas id="modelsChart"></canvas>
             </figure>
 
@@ -70,8 +70,8 @@
 
         <section class="cols-1">
             <figure>
-                <h2>Average scored points per week</h2>
-                <canvas id="yearsChart" height="300px"></canvas>
+                <h2>Puntos anotados por equipo semanalmente</h2>
+                <canvas id="scoredPoints" height="300px"></canvas>
             </figure>
         </section>
 
