feat: fromationFrequencyByTeam added

--- a/front-end/main.html
+++ b/front-end/main.html
@@ -21,7 +21,7 @@
 
             <figure>
                 <h2>Frecuencia de formaciones ofensivas</h2>
-                <canvas id="modelsChart"></canvas>
+                <canvas id="formationFrequency"></canvas>
             </figure>
 
             <figure>
